Fix horizontal scroll

--- a/css/style.sass
+++ b/css/style.sass
@@ -55,12 +55,15 @@ input
 .title, .text
     text-align: center
 
+.wrap
+    position: relative
+    overflow: hidden
+
 .nav
     height: 100px
     display: flex
     align-items: center
     justify-content: space-between
-    position: relative
     color: $white
     background-color: $graphite
     .nav__label
